--- a/Prueba Gps/platformio.ini
+++ b/Prueba Gps/platformio.ini
@@ -13,8 +13,9 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 lib_deps = 
+	mikalhart/TinyGPSPlus@^1.0.2
 	ESP8266WiFi
 	bblanchon/ArduinoJson@^6.17.3
 	hal9k-dk/ESP8266 REST client SSL@^2.1.0
-	mikalhart/TinyGPSPlus@^1.0.3
 	mikalhart/TinyGPS@0.0.0-alpha+sha.db4ef9c97a
+	knolleary/PubSubClient@^2.8
