--- a/Prueba Gps/platformio.ini
+++ b/Prueba Gps/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
 	hal9k-dk/ESP8266 REST client SSL@^2.1.0
 	mikalhart/TinyGPS@0.0.0-alpha+sha.db4ef9c97a
 	knolleary/PubSubClient@^2.8
+monitor_filters = direct
+monitor_speed = 9600
