--- a/PruebaGps2/platformio.ini
+++ b/PruebaGps2/platformio.ini
@@ -12,8 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = 
-	ESP8266WiFi
+lib_deps = ESP8266WiFi
 	bblanchon/ArduinoJson@^6.17.3
 	hal9k-dk/ESP8266 REST client SSL@^2.1.0
 	knolleary/PubSubClient@^2.8
